# ActivityRegisterMarinai

./: Activity.h  CMakeLists.txt  Controller.h  Date.cpp  Date.h  EventsDisplayerDialog.cpp  EventsDisplayerDialog.h  Register.h  Schedule.h  Time.h  main.cpp
test/: CMakeLists.txt  dateTest.cpp  registerTest.cpp  scheduleTest.cpp  timeTest.cpp
test/lib/googletest/googletest/include/gtest/internal/: gtest-internal.h
test/lib/googletest/googletest/src/: gtest-death-test.cc  gtest.cc
